# tree-pir

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
benches/: batch_10.rs  batch_12.rs  batch_14.rs  batch_16.rs  batch_20.rs  batch_24.rs  single_10.rs  single_12.rs  single_14.rs  single_16.rs  single_20.rs  single_24.rs
src/: benchmark.rs  lib.rs  main.rs  tree.rs
