[package]
name = "tree-pir"
edition = "2024"
license = "MIT"
version = "0.1.0"

[dependencies]
bincode = { version = "2", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5", features = ["plotters"] }
memmap2 = "0.9"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# PIR
respire = { git = "https://github.com/brech1/respire" }

# Tree
lean-imt = { git = "https://github.com/privacy-scaling-explorations/zk-kit.rust", package = "zk-kit-lean-imt", features = [
    "serde",
] }
semaphore-rs = { git = "https://github.com/semaphore-protocol/semaphore-rs", features = [
    "serde",
] }

[[bench]]
name = "single_12"
harness = false

[[bench]]
name = "single_16"
harness = false

[[bench]]
name = "single_20"
harness = false

[[bench]]
name = "single_24"
harness = false

[[bench]]
name = "batch_12"
harness = false

[[bench]]
name = "batch_16"
harness = false

[[bench]]
name = "batch_20"
harness = false

[[bench]]
name = "batch_24"
harness = false
